# damona

./: .TODO.single.swp  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .requirements_dev.txt  .travis.yml  BUILD_PLAN.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  README.rst.tmp  TODO.single  TODO.single.cache.json  TODO.single.sorted  bcl2fastq2-v2.20.0.422-Linux-x86_64.rpm  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: bash_test.yml  ci.yml  fish_test.yml  main.yml  pypi.yml  real_test.yml  zsh_test.yml
.pre-commit-hooks/: concat_registry.py  update_readme.py
R/3.6.1/: Makefile  Singularity.R
R/3.6.3/: Makefile
R/4.0.2/: Makefile  Singularity.R
bcl2fastq/: Makefile  Singularity.bcl2fastq
damona/: __init__.py  admin.py  binary.py  builders.py  colors.py  common.py  config.py  damona.py  environ.py  install.py  publisher.py  pull.py  registry.py  script.py  utils.py  zenodo.py
damona/bcftools/: registry.yaml
damona/biocontainers/: registry.yaml
damona/recipes/R/: registry.yaml
damona/recipes/art/: registry.yaml
damona/recipes/bcl2fastq/: Makefile  README.rst  Singularity.bcl2fastq_2.20.0  registry.txt  registry.yaml
damona/recipes/bowtie2/: registry.yaml
damona/recipes/canu/: registry.yaml
damona/recipes/conda/: Makefile  README.rst  registry.yaml
damona/recipes/damona/: Makefile  Singularity.damona  registry.yaml
damona/recipes/falco/: Singularity.falco_0.2.1  registry.yaml
damona/recipes/fastqc/: Makefile  Singularity.fastqc_0.11.8  Singularity.fastqc_0.11.9  registry.yaml
damona/recipes/fitter/: registry.yaml
damona/recipes/flye/: registry.yaml
damona/recipes/gffread/: Singularity.gffread_0.12.1  registry.yaml
damona/recipes/graphviz/: registry.yaml  test.sh
damona/recipes/graphviz_dot/: registry.yaml
damona/recipes/hisat2/: registry.yaml
damona/recipes/kraken/: Singularity.kraken_1.1  Singularity.kraken_2.0.9  registry.yaml
damona/recipes/minimap2/: registry.yaml
damona/recipes/phantompeakqualtools/: registry.yaml
damona/recipes/prokka/: Makefile  Singularity.prokka_1.14.5  registry.yaml
damona/recipes/quast/: Singularity.quast_5.0.2  registry.yaml
damona/recipes/rnadiff/: Singularity.rnadiff_1.7.0  registry.yaml
damona/recipes/rnaseqc/: registry.yaml
damona/recipes/rtools/: registry.yaml
damona/recipes/salmon/: Makefile  Singularity.salmon_1.3.0  registry.yaml
damona/recipes/seqtk/: registry.yaml
damona/recipes/sequana/: registry.yaml
damona/recipes/sequana_perl_tools/: registry.yaml
damona/recipes/sequana_tools/: README.txt  Singularity.sequana_tools_0.10.0  Singularity.sequana_tools_0.9.0  registry.yaml
damona/recipes/trf/: registry.yaml
damona/recipes/ucsc/: registry.yaml
damona/shell/: damona.sh
damona/shell/bash/: damona.sh
damona/shell/fish/: damona.fish
damona/shell/zsh/: damona.zsh
damona/software/: build_readme.py  registry.yaml  update_global_registry.py
damona/software/STAR/: README.md  Singularity.STAR_2.7.11b  registry.yaml
damona/software/adapterremoval/: README.md  registry.yaml
damona/software/art/: README  README.md  registry.yaml
damona/software/augustus/: README.md  registry.yaml
damona/software/awk/: Singularity.awk_5.3.2  registry.yaml
damona/software/bakta/: Singularity.bakta_1.12.0  registry.yaml
damona/software/bamqc/: README.md  Singularity.bamqc_5.3.8  registry.yaml
damona/software/bamtools/: README.md  README.rst  (+1 more)
doc/: build_word_cloud.py  conf.py  dev.rst  faqs.rst  graph.rst  index.rst  references.rst  requirements.txt  userguide.rst
doc/joss/: Makefile  latex.template  paper.bib  paper.md
recipes/conda/: README.rst  Singularity.conda_4.7.12
recipes/fastqc/: Makefile  Singularity.fastqc
test/: test_admin.py  test_build_readme.py  test_builders.py  test_colors.py  test_common.py  test_config.py  test_damona.py  test_environ.py  test_install.py  test_publisher.py  test_registry.py  test_script_cli.py  test_software.py  test_update_global_registry.py  test_utils.py  test_zenodo.py
test/data/: biocontainers.yaml  testing_1.0.0.img
(+443 files in other folders)
