[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "damona"
version = "0.14.2"
description = "A manager of singularity containers and their singularity recipes (NGS applications)"
authors = ["Thomas Cokelaer <thomas.cokelaer@pasteur.fr>"]
license = "BSD-3"
repository = "https://github.com/cokelaer/damona"
readme = "README.rst"
keywords = ["snakemake, sequana, RNAseq, RNADiff, differential analysis"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]
exclude =[
    "damona/*/*/*.img", "damona/*/*/*.tar.gz", "damona/*/*/*rpm"
]



[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
colorlog = "^6.8.0"
easydev = "^0.12.1"
packaging = ">=23.2"
spython = "^0.3.13"
PyYAML = "^6.0.1"
tqdm = "^4.66.1"
requests = "^2.28.1"
click-completion = "^0.5.2"
rich-click = "^1.7.2"


[tool.poetry.scripts]
damona = "damona.script:main"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
pytest-runner = "^6.0.1"
coveralls = "^3.3.1"
mock = "^5.1.0"
Sphinx = "^7.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-click = "^5.1.0"


